--- a/GTI_WebApi/Views/Home/Index.cshtml
+++ b/GTI_WebApi/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <section class="col-md-4" aria-labelledby="hostingTitle">
             <h2 id="hostingTitle">Web Hosting</h2>
             <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learne more &raquo;</a></p>
         </section>>
     </div>
 </main>
